--- a/src/pkg/Game.fxml
+++ b/src/pkg/Game.fxml
@@ -10,12 +10,12 @@
     <children>
       <VBox id="VBox" alignment="CENTER" prefHeight="200.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextArea id="result" fx:id="result" disable="true" focusTraversable="false" prefHeight="200.0" prefWidth="200.0">
+            <TextArea id="result" fx:id="result" disable="true" editable="false" focusTraversable="false" prefHeight="200.0" prefWidth="200.0">
                <cursor>
-                  <Cursor fx:constant="NONE" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor></TextArea>
-            <TextField id="choice" fx:id="choice" onAction="#next" prefHeight="25.0" prefWidth="196.0" />
-            <Button id="go" mnemonicParsing="false" onAction="#next" text="Go" />
+            <TextField id="choice" fx:id="choice" onAction="#nextButton" prefHeight="25.0" prefWidth="196.0" />
+            <Button id="go" mnemonicParsing="false" onAction="#nextButton" text="Go" />
          </children>
       </VBox>
     </children>
