--- a/src/pkg/views/Game.fxml
+++ b/src/pkg/views/Game.fxml
@@ -10,10 +10,19 @@
     <children>
       <VBox id="VBox" alignment="CENTER" prefHeight="200.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextArea id="result" fx:id="result" disable="true" editable="false" focusTraversable="false" prefHeight="200.0" prefWidth="200.0">
-               <cursor>
-                  <Cursor fx:constant="OPEN_HAND" />
-               </cursor></TextArea>
+            <ScrollPane prefHeight="150.0" prefWidth="320.0">
+              <content>
+                <AnchorPane prefHeight="178.0" prefWidth="297.0">
+                     <children>
+                        <TextArea id="result" fx:id="result" disable="true" editable="false" focusTraversable="false" prefHeight="178.0" prefWidth="303.0">
+                           <cursor>
+                              <Cursor fx:constant="OPEN_HAND" />
+                           </cursor>
+                        </TextArea>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
             <TextField id="choice" fx:id="choice" onAction="#nextButton" prefHeight="25.0" prefWidth="196.0" />
             <Button id="go" mnemonicParsing="false" onAction="#nextButton" text="Go" />
          </children>
