--- a/src/pkg/views/Game.fxml
+++ b/src/pkg/views/Game.fxml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pkg.GameController">
+<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pkg.GameController">
     <children>
       <VBox id="VBox" alignment="CENTER" prefHeight="200.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ScrollPane prefHeight="150.0" prefWidth="320.0">
-              <content>
-                <AnchorPane prefHeight="178.0" prefWidth="297.0">
-                     <children>
-                        <TextArea id="result" fx:id="result" disable="true" editable="false" focusTraversable="false" prefHeight="178.0" prefWidth="303.0">
-                           <cursor>
-                              <Cursor fx:constant="OPEN_HAND" />
-                           </cursor>
-                        </TextArea>
-                     </children>
-                  </AnchorPane>
-              </content>
+            <ScrollPane focusTraversable="false" prefHeight="200.0" prefWidth="200.0">
+               <content>
+                  <TextArea id="result" fx:id="result" editable="false" focusTraversable="false" maxHeight="1.7976931348623157E308" prefHeight="146.0" prefWidth="318.0">
+                     <cursor>
+                        <Cursor fx:constant="NONE" />
+                     </cursor>
+                  </TextArea>
+               </content>
             </ScrollPane>
             <TextField id="choice" fx:id="choice" onAction="#nextButton" prefHeight="25.0" prefWidth="196.0" />
-            <Button id="go" mnemonicParsing="false" onAction="#nextButton" text="Go" />
+            <Button id="go" focusTraversable="false" mnemonicParsing="false" onAction="#nextButton" text="Go" />
          </children>
       </VBox>
     </children>
